--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "kaplay": "^3001.0.2",
     "phaser": "^3.86.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
